from pydantic import BaseModel
from typing import Any, Dict
from fastapi import HTTPException, status

# Import the AI model evaluation function and any necessary preprocessing utilities
# Replace 'ai_model' with the actual package name and 'evaluate_contribution_text', 'preprocess_text'
# with the actual function names.
from ai_model import evaluate_contribution_text, preprocess_text

class AIScoring(BaseModel):
    # Configuration for the AI scoring system, with default values
    model_config: Dict[str, Any]

    def __init__(self, model_config: Dict[str, Any] = None):
        if model_config is None:
            model_config = {
                "model_name": "default_model",
                # Add other default configuration parameters as necessary
            }
        self.model_config = model_config
        # Load and initialize the AI model here if needed
        # self.model = load_ai_model(self.model_config["model_name"])

    def evaluate_contribution(self, contribution: str) -> float:
        """
        Evaluate the quality of a debate contribution using an AI model.
        
        Parameters:
        - contribution (str): The text content of the debate contribution.
        
        Returns:
        - float: The AI-evaluated score of the contribution.
        """
        if not contribution:
            raise HTTPException(
                status_code=status.HTTP_400_BAD_REQUEST,
                detail="Contribution content cannot be empty for evaluation."
            )
        
        try:
            # Preprocess the contribution text
            preprocessed_text = preprocess_text(contribution)
            
            # Call the actual AI model's evaluation function
            score = evaluate_contribution_text(preprocessed_text)
            
            # Post-process the score if needed, e.g., apply threshold or other transformations
            # Example: score = apply_postprocessing(score, self.model_config)
            
            return score
        except Exception as e:
            raise HTTPException(
                status_code=status.HTTP_500_INTERNAL_SERVER_ERROR,
                detail=f"AI scoring failed: {str(e)}"
            )

# Example usage:
# ai_scoring = AIScoring(model_config={"model_name": "your_model_name"})
# score = ai_scoring.evaluate_contribution("This is a debate contribution.")
